name:          regions
version:       0.11
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2009-2011 Bas van Dijk
author:        Bas van Dijk
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
homepage:      https://github.com/basvandijk/regions/
bug-reports:   https://github.com/basvandijk/regions/issues
stability:     experimental
category:      Control, Monadic Regions
synopsis:      Provides the region monad for safely opening and working with
               scarce resources.
description:
  This package provides the region monad transformer. Scarce resources like
  files, memory pointers or USB devices for example can be opened in a
  region. When the region terminates, all opened resources will be automatically
  closed. The main advantage of regions is that the opened resources can not be
  returned from the region which ensures no I/O with closed resources is
  possible.
  .
  The primary technique used in this package is called \"Lightweight monadic
  regions\" which was invented by Oleg Kiselyov and Chung-chieh Shan.  See:
  .
  <http://okmij.org/ftp/Haskell/regions.html#light-weight>
  .
  Also see the @regions-mtl@ and @regions-monadstf@ packages which provide
  instances for the classes in the respected monad transformers packages.
  .
  For an example on how to use this library see the @safer-file-handles@,
  @usb-safe@ or @regional-pointers@ packages.

extra-source-files: README.markdown, NEWS, CONTRIBUTORS

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/regions.git

Library
  GHC-Options: -Wall
  build-depends: base                      >= 4     && < 4.5
               , base-unicode-symbols      >= 0.1.1 && < 0.3
               , transformers              >= 0.2   && < 0.3
               , monad-control             >= 0.2   && < 0.3
  exposed-modules: Control.Monad.Trans.Region
                   Control.Monad.Trans.Region.OnExit
                   Control.Monad.Trans.Region.Unsafe
  other-modules:   Control.Monad.Trans.Region.Internal
